--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "yarn build.ts",
     "build.ts": "tsc",
     "build.ts.watch": "tsc -w",
+    "check.types": "npx tsc --pretty --noEmit --skipLibCheck",
     "db.migrate": "dotenv knex migrate:latest",
     "db.reset": "dropdb api-example && createdb api-example -O api-user && yarn db.migrate",
     "dev": "yarn dev.watch.debug",
@@ -21,6 +22,7 @@
     "dev.watch.debug": "DEBUG=allay-api:*,graphile-build:* yarn dev.watch",
     "lint": "tslint --format stylish --project tsconfig.json",
     "precommit": "lint-staged",
+    "prepush": "yarn check.types",
     "start": "node dist/Server.js",
     "test.watch": "NODE_ENV=test jest --watch",
     "test": "NODE_ENV=test jest"
